# envchain-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/backend/: age.rs  keychain.rs  mod.rs  secret_service.rs  windows_credential_manager.rs
tests/: keychain_integration.rs
