[package]
name = "envchain-rs"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "envchain"
path = "src/main.rs"

[features]
default = ["secret-service-backend", "age-backend", "keychain-backend"]
secret-service-backend = ["dep:secret-service", "dep:async-io"]
age-backend = ["dep:age"]
keychain-backend = ["dep:security-framework"]

[dependencies]
secret-service = { version = "3", features = ["rt-async-io-crypto-rust"], optional = true }
age = { version = "0.11", features = ["ssh"], optional = true }
rpassword = "7"
async-io = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2", optional = true }
core-foundation = "0.9"
