[package]
name = "envchain-rs"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "envchain"
path = "src/main.rs"

[features]
default = ["secret-service-backend", "age-backend"]
secret-service-backend = ["dep:secret-service", "dep:async-io"]
age-backend = ["dep:age", "dep:tempfile"]
windows-credential-manager = ["dep:keyring-core", "dep:windows-native-keyring-store", "dep:regex"]

[dependencies]
secret-service = { version = "3", features = ["rt-async-io-crypto-rust"], optional = true }
age = { version = "0.11", features = ["ssh"], optional = true }
tempfile = { version = "3", optional = true }
zeroize = { version = "1", features = ["alloc"] }
keyring-core = { version = "0.7", optional = true }
windows-native-keyring-store = { version = "0.5", optional = true }
regex = { version = "1", optional = true }
rpassword = "7"
async-io = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
